--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
 >> BRUH <<
 - Custom huds
-- Restrictions (no noclip for example, game ends when you die)
-- Teleport and visibility system from proxspawn
+- Precache npcs
+- Hide NPCs when spawned on 0 0 0 
